# qtile-config

./: .flake8  .gitignore  ascii-colors.json  bar.py  color.py  config.py  custom_config.py  default_config.py  floating_rules.py  install-qtile  install.sh  key_config.py  keys.py  mypy.ini  opacity.py  procs.py  rc.lua  requirements.txt  setup.py  templates.py  test_config.py  util.py  vars.yml  xinitrc
qutely/: bar.py  debug.py  dev-requirements.txt  display.py  floating_rules.py  helpers.py  keys.py  opacity.py  physical.py  procs.py  pyproject.toml  requirements.txt  templates.py  util.py  vars.py  vars.yml
qutely/templates/: compton.conf.j2  dunstrc.j2  kitty.conf.j2  picom.conf.j2
qutely/widgets/: capslocker.py  check_and_warn.py  checkclock.py  checkclock_widget.py  contextmenu.py  qalendar.py  widgetbox.py
qutely/widgets/lib/: notifier.py
qutely/widgets/test/: test_checkclock.py
templates/: compton.conf.j2  dunstrc.j2  picom.conf.j2  terminalrc.j2
widgets/: capslocker.py  check_and_warn.py  checkclock.py  checkclock_widget.py  contextmenu_ng.py  fakecam.py
widgets/test/: test_checkclock.py
